--- a/cms/css/style.css
+++ b/cms/css/style.css
@@ -729,9 +729,10 @@ p{
 }
 
 .text{
+    overflow: scroll;
     width: 190px;
     height: 130px;
-    resize: none;
+    overflow: auto;
 }
 
 .h1_sobre{
